# smos

./: .factcheck.json  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  smos.bench.toml  smos.toml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
benchmarks/: .gitignore  README.md  main.py  pyproject.toml
benchmarks/beam/: run.py
benchmarks/common/: smos_client.py  test_smos_client.py
docs/: ARCHITECTURE.md  BASELINE.md  REFACTOR_PLAN.md
docs/decisions/: 0001-record-struct-constructors.md  0002-shared-testkit-parity-gate.md  0003-god-module-split-stable-pubapi.md  0004-scanstate-encapsulation-drift-priority.md  0005-embedding-dim-canonical-source.md  0006-native-windows-service-runner.md  README.md
docs/research/: seo-keyword-clusters-2026-06-25.md  smos-competitive-research-2026-06-25.md
marketing/: .factcheck-strategy.json
marketing/landing/: TZ.md
marketing/strategies/: smos.md
npm/: README.md  install.js  package.json
scripts/: diag-service-install.ps1
smos-adapters/: Cargo.toml
smos-adapters/src/: config.rs  lib.rs  paths.rs  paths_tests.rs
smos-adapters/src/cli/: audit_runner.rs  config_runner.rs  dir_import_runner.rs  dir_scanner.rs  doctor_runner.rs  finalize_runner.rs  forwarding.rs  git_import_runner.rs  import_runner.rs  init_checks.rs  init_defaults.rs  init_models.rs  init_nli.rs  init_path.rs  init_runner.rs  llama_runner.rs  mod.rs  raw_import_runner.rs  search_runner.rs  server_runner.rs  service.rs  tracing_setup.rs
smos-adapters/src/cli/service/: env_file.rs  templates.rs  windows.rs  windows_env.rs  windows_helpers.rs  windows_log.rs  windows_log_reader.rs  windows_summary.rs
smos-adapters/src/cli/service_runner/: mod.rs  scm.rs  status.rs
smos-adapters/src/config/: defaults.rs  loader.rs  tests.rs  types.rs  validate.rs
smos-adapters/src/config/tests/: defaults_parse_legacy.rs  validate_audit.rs
smos-adapters/src/doctor/: markdown.rs  mod.rs  terminal.rs  types.rs
smos-adapters/src/doctor/checks/: binaries.rs  llm_providers.rs  mod.rs  models.rs  persons.rs  surreal.rs
smos-adapters/src/dreaming/: agent.rs  agent_tests.rs  mod.rs  prompts.rs
smos-adapters/src/dreaming/tools/: list_memory_keys.rs  mod.rs  nli_classify.rs  shared.rs  update_fact.rs
smos-adapters/src/git_sync/: export.rs  format.rs  format_tests.rs  import.rs  manager.rs  mod.rs  test_support.rs
smos-adapters/src/http/: axum_server.rs  error_mapper.rs  stream_transform.rs
smos-adapters/src/http/routes/: chat_completions.rs  mod.rs
smos-adapters/src/http/routes/cli/: finalize.rs  import_opencode.rs  import_raw.rs  mod.rs  search.rs
smos-adapters/src/llama_server/: config.rs  health.rs  manager.rs  mod.rs
smos-adapters/src/nli/: device.rs  mod.rs  native_nli.rs  ort_cache.rs  runtime.rs
smos-adapters/src/opencode/: discovery.rs  transcript.rs
smos-adapters/src/providers/: mod.rs
smos-adapters/src/providers/llama_cpp/: llama_cpp_reranker.rs  mod.rs
smos-adapters/src/providers/ollama/: mod.rs  ollama_client.rs  ollama_embedding.rs  ollama_extractor.rs
smos-adapters/src/runtime/: delay.rs  extraction_supervisor.rs  mod.rs  session_watcher.rs
smos-adapters/src/storage/: fact_repository.rs  mapping.rs  mod.rs  rows.rs  session_repository.rs  surreal_schema.rs  surreal_store.rs  vector_search.rs
smos-adapters/src/upstream/: http_client.rs  mod.rs  reqwest_upstream.rs
smos-adapters/tests/: doctor_unit.rs  e2e_cli_forwarding.rs  e2e_defensive.rs  e2e_enrichment.rs  e2e_extraction.rs  e2e_finalize.rs  e2e_import.rs  e2e_passthrough.rs  e2e_request.rs  e2e_server.rs  e2e_session_watcher.rs  extraction_concurrency_gate.rs  native_nli_tests.rs  spike_surrealdb_syntax.rs  surreal_store_integration.rs
smos-adapters/tests/common/: mod.rs
smos-application/: Cargo.toml
smos-application/src/: lib.rs
smos-application/src/errors/: upstream_error.rs  use_case_error.rs
smos-application/src/helpers/: logging.rs  mod.rs  noise_filter.rs  person_router.rs  retrieval_pipeline.rs  session_marker.rs
smos-application/src/ports/: clock.rs  embedding_provider.rs  fact_repository.rs  id_generator.rs  llm_upstream.rs  mod.rs  nli_classifier.rs
smos-application/src/testkit/: clock.rs  facts.rs  mod.rs  providers.rs  sessions.rs
smos-application/src/testkit/tests/: facts_sessions.rs  mod.rs  providers.rs
smos-application/src/types/: search_hit.rs
smos-application/src/use_cases/: enrich_request.rs  extract_facts_from_response.rs  finalize_session.rs  handle_chat_completion.rs  import_opencode_session.rs  mod.rs  retrieve_facts.rs
smos-application/src/use_cases/extract_facts_from_response/: dedup.rs  persist.rs  tests.rs
smos-application/src/use_cases/extract_facts_from_response/tests/: format_tool_calls.rs  pipeline.rs  semantic_dedup.rs
smos-application/src/use_cases/finalize_session/: merge.rs  outcome.rs  scan.rs  tests.rs
smos-application/tests/: port_shape.rs
smos-domain/: Cargo.toml
smos-domain/src/: config.rs  lib.rs
smos-domain/src/entities/: fact.rs  mod.rs  session.rs
smos-domain/src/value_objects/: memory_key.rs  timestamp.rs
