[package]
name = "smos"
version = "0.2.2"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SMOS adapter layer — concrete implementations of port traits."

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/smos-{ target }-v{ version }.{ archive-format }"
bin-dir = "smos{ binary-ext }"

[dependencies]
# Workspace-shared.
smos-domain.workspace = true
smos-application.workspace = true
tokio.workspace = true
surrealdb.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
futures.workspace = true
bytes.workspace = true
uuid.workspace = true
sha1.workspace = true

# HTTP server + upstream proxy. Declared directly here because they are only
# consumed by this crate (the single place IO happens).
axum = { version = "0.8", features = ["json", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
async-stream = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
# CLI argument parsing for the unified `smos` binary's subcommands.
clap = { version = "4", features = ["derive"] }
# TOML serializer/deserializer for the git-sync markdown frontmatter. The
# `config` crate already pulls `toml` in transitively (via its `toml`
# feature), but we declare it explicitly so the git-sync module has a stable
# import path independent of the `config` crate's internal feature wiring.
toml = "0.8"
# Recursive directory walker for the git-sync import path. The std-only
# alternative (`fs::read_dir` recursion) would re-implement the
# deterministic-order traversal that `walkdir` already provides.
walkdir = "2"

# SMOS Dreaming Agent — autonomous memory audit via an LLM with tool-calling.
# rig-core is pinned to the 0.14 line and stripped of its default reqwest
# features so it shares the workspace's rustls stack (no native-tls, no
# duplicate OpenSSL on Linux). The `derive` feature pulls in `rig-derive`
# which is convenient for any future ToolEmbedding impls.
rig-core = { version = "0.14", default-features = false, features = [
    "derive",
    "reqwest-rustls",
] }
# tokio-cron-scheduler backs the periodic `dreaming` audit trigger declared in
# `[audit].schedule`. Pinned to the 0.14 line (latest stable as of writing).
tokio-cron-scheduler = "0.14"

# Native NLI backend (ort + tokenizers + hf-hub). Native NLI is the only
# available backend (the legacy Python implementation was removed). The
# version pin on `ort` is exact (=2.0.0-rc.12) because the API is still
# pre-stable and a patch release could silently change EP wiring.
#
# `load-dynamic` decouples the binary from the ONNX Runtime shared library:
# nothing is linked at build time. The matching DLL (CPU, CUDA, DirectML or
# the macOS CoreML build) is downloaded at runtime by `nli::ort_cache` and
# loaded via `ORT_DYLIB_PATH`. One binary then runs on every GPU vendor
# without compile-time feature selection.
#
# `api-24` is enabled explicitly because ort 2.0.0-rc.12's `load-dynamic`
# feature does NOT auto-enable a baseline C-API level (unlike
# `download-binaries`, which enables `api-24`). Without it, the VitisAI EP
# code references a struct field gated behind `api-18`, and compilation
# fails with `no field SessionOptionsAppendExecutionProvider_VitisAI on
# type &OrtApi`. See pykeio/ort#547. Pinned to `api-24` to match the
# ORT 1.24.x line we download at runtime.
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "load-dynamic",
    "api-24",
] }
tokenizers = { version = "0.23", default-features = false, features = [
    "onig",
] }
hf-hub = { version = "0.4", default-features = false, features = [
    "ureq",
] }
# Archive extraction for the dynamically-downloaded ORT DLL. Microsoft
# publishes Windows ORT as `.zip` and Linux/macOS as `.tgz`; DirectML ships
# as a NuGet `.nupkg` (which is also a zip). `flate2` is the gzip decoder
# behind the `tar` crate's `.tgz` reader.
zip = { version = "2", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = "1"

# Shared shutdown primitive for the §12 drain sequence. The CLI path
# wires Ctrl+C / SIGTERM into a `CancellationToken`; the Windows service
# path wires SCM `Stop` / `Shutdown` into the same token so the drain
# ordering stays identical across launch modes.
tokio-util = "0.7"
# Rolling file appender used by the Windows service entry point — a
# service has no console, so `tracing_subscriber::fmt` (which targets
# stdout / stderr) would silently lose every log line. The appender is
# cross-platform but only referenced from the windows-only service code.
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
# Native Windows Service protocol binding. The SMOS process must call
# `StartServiceCtrlDispatcher` / register `ServiceMain` and report
# `SERVICE_RUNNING` to the SCM, otherwise SCM kills it with error 1053
# (ERROR_SERVICE_REQUEST_TIMEOUT) after ~30s. This is the standard Rust
# binding, used by mullvad / nym-vpn / etc.
windows-service = "0.8"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# E2E tests spin up an in-process mock OpenAI upstream (no external LLM).
wiremock = "0.6"

[features]
default = []

# GPU execution providers are selected at RUNTIME via `[nli_backend].device`
# (one of: "auto" | "cpu" | "directml" | "cuda" | "metal"). The matching
# ONNX Runtime DLL is downloaded into the local cache on first use. There
# are no compile-time GPU features — the same `smos` binary runs on every
# GPU vendor without rebuilds.

[[bin]]
name = "smos"
path = "src/bin/smos.rs"
